@@ -1,3 +1,9 @@
+2018-05-10  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, silence a couple more build warnings on the stable branch
+
+        * openvr/src/CMakeLists.txt:
+
 2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [WPE] Build cleanly with GCC 8 and ICU 60
