@@ -1,3 +1,10 @@
+2018-05-10  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, silence a couple more build warnings on the stable branch
+
+        * platform/network/soup/NetworkStorageSessionSoup.cpp:
+        (WebCore::NetworkStorageSession::getCredentialFromPersistentStorage):
+
 2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [WPE] Build cleanly with GCC 8 and ICU 60
