@@ -1,3 +1,10 @@
+2018-05-10  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, silence a couple more build warnings on the stable branch
+
+        * heap/MarkedBlock.cpp:
+        (JSC::MarkedBlock::Handle::didAddToDirectory):
+
 2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [WPE] Build cleanly with GCC 8 and ICU 60
